--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,6 @@
             "email": "david@crazyinventor.net"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {}
 }
