Adding PSR-4 autoloading path

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "email": "david@crazyinventor.net"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "CrazyInventor\\HtmlTag\\": "src/"
+        }
+    },
     "minimum-stability": "stable",
     "require": {}
 }
